# datavisual

./: README.md  pyproject.toml  requirements.txt
src/datavisual/: __init__.py  app2.py
