[project]
name = "datavisual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ajmal Khan", email = "128520849+Ajmalniz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.1",
]

[project.scripts]
datavisual = "datavisual:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
